package sample;

public final class Database {

    public static String getUrl() {
        return "jdbc:mysql://127.0.0.1:3306/?user=root";
    }

    public static String getPwd() {
        return "Sveners3j5321!";
    }
}

